[metadata]
name = pyvesc
version = 1.0.6
author = Liam Bindle
author_email = liambindle@gmail.com
url = https://github.com/LiamBindle/PyVESC

description = Python implementation of the VESC communication protocol.
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    pyserial==3.5
    crccheck==1.3.0
